# VLA-Lab

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
configs/deploy/: dashboard.annotated.example.json  dashboard.json  realworld_groot_client_agent.json  realworld_groot_server_agent.json
configs/deploy/.deploy_state/: input_values.json
docs/: attention_backend.md  deploy_agent.md  deploy_dashboard.md  integration_guide.md
docs/examples/: deploy_agent_client.json  deploy_agent_server.json
examples/: basic_usage.py  convert_legacy_logs.py  eval_groot_openloop.py  eval_vita_openloop.py  quickstart.py
src/vlalab/: __init__.py  cli.py  core.py
src/vlalab/adapters/: __init__.py  converter.py  dp_adapter.py  groot_adapter.py
src/vlalab/apps/: __init__.py
src/vlalab/attention/: __init__.py  backend.py
src/vlalab/deploy/: __init__.py  agent.py
src/vlalab/eval/: __init__.py  avaloha_loader.py  lerobot_loader.py  open_loop_eval.py  policy_interface.py
src/vlalab/index/: __init__.py  sidecar.py
src/vlalab/logging/: __init__.py  jsonl_writer.py  run_loader.py  run_logger.py
src/vlalab/schema/: __init__.py  run.py  step.py
src/vlalab/viz/: __init__.py  mpl_fonts.py
tests/: test_attention_backend_discovery.py  test_cli.py  test_dataset_service.py  test_deploy_service.py  test_eval_service.py  test_index_sidecar.py  test_run_workspace_frontend.py
toolbox/: inference_data_gui.py  mpl_fonts.py  tmp.md  training_data_gui.py
web/: .env.example  next.config.mjs  package.json
web/app/: globals.css  layout.js  page.js
web/app/datasets/: page.js
web/app/deploy/: page.js
web/app/eval/: page.js
web/app/latency/: page.js
web/components/: chart-kit.js  dataset-viewer-client.js  deploy-dashboard-client.js  eval-viewer-client.js  home-page-client.js  hydration-guard.js  latency-compare-client.js  run-card.js  run-detail-page-client.js  run-replay-client.js  run-table.js  run-workspace-inspector.js  run-workspace-viewer.js  runs-page-client.js  sparkline.js  top-nav.js
web/lib/: api.js  format.js
(+49 files in other folders)
