[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlalab"
version = "0.1.0"
description = "A toolbox for tracking and visualizing the real-world deployment process of VLA models"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "VLA-Lab Contributors"}
]
keywords = ["robotics", "vla", "deployment", "visualization", "logging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.5.0",
    "pydantic>=2.0.0",
    "streamlit>=1.20.0",
    "opencv-python>=4.5.0",
    "click>=8.0.0",
    "rich>=12.0.0",
]

[project.optional-dependencies]
zarr = [
    "zarr>=2.10.0",
]
full = [
    "zarr>=2.10.0",
    "scipy>=1.7.0",
    "pillow>=9.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "ruff>=0.0.250",
]

[project.scripts]
vlalab = "vlalab.cli:main"

[project.urls]
Homepage = "https://github.com/VLA-Lab/VLA-Lab"
Documentation = "https://github.com/VLA-Lab/VLA-Lab#readme"
Repository = "https://github.com/VLA-Lab/VLA-Lab"
Issues = "https://github.com/VLA-Lab/VLA-Lab/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vlalab = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
